force-app/main/default/objects/cgcloud__Signature_Template__c/cgcloud__Signature_Template__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the signature template object, to be used for signature flow steps.</description>
    <label>Signature Template</label>
    <nameField>
        <label>Signature Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Signature Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>