force-app/main/default/objects/cgcloud__Signature_Template__c/fields/cgcloud__Active__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls if the template can be used for creating signatures.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>