force-app/main/default/objects/cgcloud__Signature_Template__c/fields/cgcloud__Attribute_Set__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Attribute_Set__c</fullName>
    <label>Attribute Set</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TourStartandEndofDay</fullName>
            </value>
            <value>
                <fullName>ProductCheckOut</fullName>
            </value>
            <value>
                <fullName>ProductCheckIn</fullName>
            </value>
            <value>
                <fullName>OutwardInventoryTransfer</fullName>
            </value>
            <value>
                <fullName>InwardInventoryTransfer</fullName>
            </value>
            <value>
                <fullName>TruckAudit</fullName>
            </value>
            <value>
                <fullName>CashCheckOut</fullName>
            </value>
            <value>
                <fullName>CashCheckIn</fullName>
            </value>
            <value>
                <fullName>SalesandDeliveryDocument</fullName>
            </value>
            <value>
                <fullName>ReplenishmentOrder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>