force-app/main/default/objects/cgcloud__Signature_Template__c/fields/cgcloud__Capture_Location__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Capture_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capture Location</label>
    <type>Checkbox</type>
</CustomField>