force-app/main/default/objects/cgcloud__Signature_Template__c/fields/cgcloud__Mobility_Relevant__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Mobility_Relevant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls, if the template is usable on the Mobility</description>
    <label>Mobility Relevant</label>
    <type>Checkbox</type>
</CustomField>