force-app/main/default/objects/cgcloud__Signature_Template__c/fields/cgcloud__Print_Automatically__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Print_Automatically__c</fullName>
    <defaultValue>false</defaultValue>
    <description>--- Attribute no longer used --- Controls if a report is printed automatically in the release process.</description>
    <label>Print Automatically</label>
    <type>Checkbox</type>
</CustomField>